package app;

public class App {
    public static void main(String[] args) {
        LibraryManager libraryManager = new LibraryManager();
        libraryManager.manageLibrary();
    }

}
